--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: default
-title: Blog Posts
+title: banana-wiki -
 ---
 
 <div id="home">
   <h2><i class="icon-bookmark"></i> available articles</h2>
   <ul id="blog-posts" class="posts">
     {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }} &raquo;</span><a href="{{ post.url }}">{{ post.title }}</a></li>
+      <li><a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
 </div>
